# Lode-Runner-2020

./: .gitattributes  .gitignore  .gitmodules  Button.h  CMakeLists.txt  Functions.h  LICENSE  LR_Paths.props  Level.h  Lode Runner.sln  Lode Runner.vcxproj  Lode Runner.vcxproj.filters  Main.cpp  MultiMediaRecording.h  POCKETCHIP-PORT-SUMMARY.md  POCKETCHIP.md  Player.h  ReadMe.md  Structure.h  Variables.h  build-pocketchip.sh  config.txt
.github/workflows/: cmake-emscripten.yml  cmake-linux.yml  cmake-wasm.yml  cmake-windows.yml
Android/: .gitignore  .gitmodules  README.md  ReadMe.md  build.gradle  settings.gradle
Android/LodeRunnerAndroid/: build.gradle
Android/LodeRunnerAndroid/src/main/: AndroidManifest.xml
Android/LodeRunnerAndroid/src/main/assets/Shaders/: level_FS.txt  level_VS.txt  main_FS.txt  main_VS.txt  player_FS.txt  player_VS.txt  (+2 more)
Android/LodeRunnerAndroid/src/main/cpp/: AudioCallback.cpp  AudioCallback.h  CMakeLists.txt  Engine.cpp  Engine.h  GameActivity.cpp  Helper.cpp  Helper.h  LodeRunnerRenderer.cpp  LodeRunnerRenderer.h  shader_a.h
Android/common/: android_fopen.cpp
Android/common/ndk_helper/: JNIHelper.cpp  JNIHelper.h
Android/common/vorbis_working_cmakelists/: CMakeLists.txt
Android/common/vorbis_working_cmakelists/lib/: CMakeLists.txt
Android/gradle/wrapper/: gradle-wrapper.properties
Assets/Shaders/: character.fs  character.vs  level.fs  level.vs  level2.fs  level_FS.txt  main.fs  main.vs  player.fs  player.vs  player_FS.txt  player_VS.txt  select.fs  select.vs  touch.fs
Headers/: Audio.h  Button.h  Enemy.h  Functions.h  GLHelper.h  Gold.h  Level.h  Structure.h  Variables.h
Headers/Enums/: EnemyState.h  LayoutBlock.h  Menu.h  PitState.h
Headers/MultiMediaRecording/: AudioParameters.h  MultiMediaHelper.h  RecordingState.h  Stream.h
Headers/Structs/: Vector2D.h  Vector2DInt.h
Launcher/: LR-Launcher.pro  ReadMe.md  application.qrc  configreader.cpp  configreader.h  gamemodewidget.cpp  gamemodewidget.h  labeledlineedit.cpp  labeledlineedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  othersettings.cpp  othersettings.h  resolutionwidget.cpp  resolutionwidget.h
Level/: OriginalLevels.txt
Shaders/: level_VS.txt  main_FS.txt  main_VS.txt  player_FS.txt  player_VS.txt  select_FS.txt  select_VS.txt
Sources/: Audio.cpp  Audio.h  Brick.cpp  Brick.h  Button.cpp  Button.h  Drawing.cpp  Drawing.h  Enemy.cpp  Enemy.h  Functions.cpp  GLHelper.cpp  GLHelper.h  GameTime.cpp  GameTime.h  Gold.cpp  Gold.h  IOHandler.cpp  IOHandler.h  Level.cpp  Main.cpp  Player.cpp  Player.h  Structure.cpp  Trapdoor.h  Variables.cpp
Sources/Enums/: AudioStatus.h  Direction.h  EnemyState.h  PitState.h
Sources/GameStates/: Begin.cpp  Death.cpp  Death.h  GameState.cpp  GameState.h  Pause.cpp  Play.cpp  Play.h
Sources/MultiMediaRecording/: AudioParameters.h  AudioStream.cpp  AudioStream.h  MultiMedia.cpp  MultiMedia.h  MultiMediaHelper.cpp  MultiMediaHelper.h  Stream.cpp  Stream.h  VideoParameters.cpp  VideoParameters.h  VideoStream.cpp  VideoStream.h
Sources/States/: GameOver.cpp  GamePlay.cpp  GamePlay.h  Generator.cpp  Generator.h  Intro.cpp  Intro.h  MainMenu.cpp  MainMenu.h  Outro.cpp  Outro.h  Select.cpp  State.cpp  State.h  StateContext.cpp  StateContext.h
assets/: config-pocketchip.json  config.json  translation.json
assets/levels/: championship.json  fanbook.json  original.json  professional.json  revenge.json
assets/shaders/: character.fs  character.vs  level.fs  level.vs  player.fs  player.vs  touch.vs
cmake/: PocketCHIP.cmake
src/loderunner/: AppContainer.cpp  AppContainer.h  Audio.cpp  Audio.h  Brick.cpp  Brick.h  Button.cpp  Button.h  Drawing.cpp  Drawing.h  Enemy.cpp  Enemy.h  GLHelper.cpp  GLHelper.h  GameContext.cpp  GameContext.h  GameTime.h  Gold.cpp  Gold.h  IOHandler.cpp  IOHandler.h  Main.cpp  Player.cpp  Player.h  Shader.h  Trapdoor.h
src/loderunner/Audio/: Audio.cpp  RTAudioContext.h
src/loderunner/Enums/: LayoutBlock.h
src/loderunner/GameStates/: Begin.cpp  Begin.h  Death.cpp  GameState.cpp  GameState.h  Pause.cpp  Pause.h  Play.cpp  Play.h
src/loderunner/MultiMediaRecording/: AudioParameters.cpp  AudioStream.cpp  AudioStream.h  MultiMedia.cpp  VideoStream.cpp
src/loderunner/Rendering/: GLHelper.cpp  GLHelper.h  RenderingManager.h  Shader.h  Text.cpp  Text.h
src/loderunner/States/: GameOver.cpp  GameOver.h  GamePlay.cpp  GamePlay.h  Generator.cpp  Generator.h  Intro.cpp  Intro.h  MainMenu.cpp  MainMenu.h  Outro.cpp  Outro.h  Select.cpp  Select.h  State.cpp  State.h  StateContext.cpp  StateContext.h
src/loderunner/gameplay/: Brick.cpp  Brick.h  Enemy.cpp  Enemy.h  GameContext.cpp  GameContext.h  GameElements.cpp  GameElements.h  Gold.h  LayoutBlock.h  LevelLoader.cpp  LevelLoader.h  Player.cpp  Player.h  TextureMap.h  Trapdoor.h
src/loderunner/iocontext/: AndroidIOContext.h  Button.cpp  Button.h  ButtonInputs.h  EmscriptenIOContext.cpp  EmscriptenIOContext.h  GameConfiguration.h  GeneratorGUI.cpp  GeneratorGUI.h  GlfwIOContext.cpp  GlfwIOContext.h  IOContext.h  ScreenParameters.h  Translation.cpp  Translation.h
src/loderunner/iocontext/audio/: Audio.h  AudioContext.h  AudioFile.h  OboeAudio.h  OboeAudioContext.h  OpenALAudio.h  OpenALAudioContext.h  OpenALAudioFile.h  RTAudioContext.h
src/loderunner/iocontext/rendering/: EmscriptenRenderingManager.cpp  EmscriptenRenderingManager.h  RenderingManager.cpp  RenderingManager.h  Shader.h  Text.cpp  Text.h
src/loderunner/multimediarecording/: AudioParameters.h  AudioStream.cpp  AudioStream.h  MultiMedia.cpp  MultiMedia.h  MultiMediaHelper.cpp  MultiMediaHelper.h  Stream.h  VideoParameters.h  VideoStream.cpp  VideoStream.h
src/loderunner/states/: GameOver.cpp  GameOver.h  GamePlay.cpp  GamePlay.h  Generator.cpp  Generator.h  Intro.cpp  Intro.h  MainMenu.cpp  MainMenu.h  Outro.cpp  Outro.h  Select.cpp  Select.h  State.cpp  StateContext.cpp  StateContext.h
src/loderunner/states/gamestates/: Begin.cpp  Begin.h  Death.cpp  Death.h  GameState.cpp  GameState.h  Pause.cpp  Play.cpp  Play.h
src/submodules/: glad.c
src/submodules/glad/: glad.h
(+15 files in other folders)
